--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+package-lock.json
 
 # Build output
 dist/
-build/
 *.tsbuildinfo
 
 # Environment
@@ -18,10 +14,6 @@ build/
 # Logs
 *.log
 logs/
-pids/
-*.pid
-*.seed
-*.pid.lock
 
 # OS
 .DS_Store
@@ -32,23 +24,11 @@ Thumbs.db
 .idea/
 *.swp
 *.swo
-*~
 
 # Testing
 coverage/
 .nyc_output/
 
-# PM2
-.pm2/
-pm2.log
-pm2-error.log
-
-# Temp
-tmp/
-temp/
-.cache/
-
-# Generated projects (for testing)
+# Generated test projects
 test-*/
 my-*/
-*.md
