--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,6 +19,7 @@ concurrency:
 
 jobs:
   build:
+    if: contains(github.event.head_commit.message, '--deploy')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
